2009-03-31  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: SavePageViewState saves the list of controls which
	require post back regardless of whether view state is disabled or
	not. Fixes bug #490753

	* ApplicationFileParser.cs, MasterPageParser.cs, PageParser.cs,
	PageThemeFileParser.cs, PageThemeParser.cs, UserControlParser.cs,
	WebHandlerParser.cs, WebServiceParser.cs: 2.0 constructors take a
	VirtualPath instance for the virtualPath parameter, instead of a
	string.

2009-03-18  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: AppRelativeResourceDirectory no longer returns a
	hard-coded "~/" when template control's virtual path cannot be
	determined. It returns application relative version of
	TemplateSourceDirectory instead.

2009-03-13  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: clear the controls cache on control removal. This
	ensures that a subsequent FindControl call won't return the
	removed control.

2009-03-06  Marek Habersack  <mhabersack@novell.com>

	* XPathBinder.cs: use the pased namespace manager

	* ControlBuilder.cs: BindingContainerType - if control type of the
	containing builder is null, return typeof (Control)

2009-02-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* BaseParser.cs:
	* PageParser.cs:
	* ControlBuilder.cs:
	* TemplateParser.cs:
	* Page.cs:
	* SimpleWebHandlerParser.cs: settings that have to be in
	machine.config or the root level web.config now call
	GetWebApplicationSection.

2009-02-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* ObjectStateFormatter.cs: use GetWebApplication
	instead of GetSection for application level configuration.

2009-02-28  Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Control.cs: Avoid double OnInit in scenarios with two master
	pages.

2009-02-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TemplateControl.cs: implement the other ReadStringResource method.
	Patch from Kornel Pal.

2009-02-20 Gonzalo Paniagua Javier <gonzalo@novell.com>
