@@ -1,3 +1,8 @@
+2009-04-07  Marek Habersack  <mhabersack@novell.com>
+
+	* Control.cs: ApplyTheme - make sure Page is not null before using
+	it. Fixes bug #492666
+
 2009-03-31  Marek Habersack  <mhabersack@novell.com>
 
 	* Page.cs: SavePageViewState saves the list of controls which
